src/test/deca/context/invalid/operation-binaire-multiply-wrong.deca
// Description:
//    Test 3.33 fail avec multiply 
//
// Resultats:
//    Ligne 11: Multiply ne s'utilise qu'avec des int ou des float.
//
// Historique:
//    cree le 06/01/2023

{
    1 * "hello world";
}